--- a/Shop.html
+++ b/Shop.html
@@ -15,7 +15,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <nav class="hidden md:flex space-x-4">
-            <a href="home.html" class="hover:underline">Home</a>
+            <a href="index.html" class="hover:underline">Home</a>
             <a href="about.html" class="hover:underline">About</a>
             <a href="register.html" class="hover:underline">Register</a>
             <a href="Donation.html" class="hover:underline">Donate</a>
@@ -29,7 +29,7 @@
 
     <!-- Mobile Navigation Menu -->
     <div id="mobileMenu" class="hidden md:hidden absolute bg-[#E52D2F] text-white w-3/4 right-0 p-4 rounded-md z-50 max-w-xs mt-2">
-        <a href="home.html" class="block py-2 hover:bg-[#c82333] px-2 rounded" onclick="closeMenu()">Home</a>
+        <a href="index.html" class="block py-2 hover:bg-[#c82333] px-2 rounded" onclick="closeMenu()">Home</a>
         <a href="about.html" class="block py-2 hover:bg-[#c82333] px-2 rounded" onclick="closeMenu()">About</a>
         <a href="register.html" class="block py-2 hover:bg-[#c82333] px-2 rounded" onclick="closeMenu()">Register</a>
         <a href="Donation.html" class="block py-2 hover:bg-[#c82333] px-2 rounded" onclick="closeMenu()">Donate</a>
