--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <nav class="desktop-menu hidden md:flex space-x-4">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <div class="nav-item">
                 <a href="about.html" class="hover:underline">About</a>
                 <div class="dropdown-menu">
@@ -117,7 +117,7 @@
 
     <!-- Mobile Navigation Menu -->
     <div id="mobileMenu" class="mobile-menu md:hidden absolute bg-[#E52D2F] text-white w-3/4 right-0 p-2 rounded-md hidden z-50 max-w-xs">
-        <a href="home.html" class="block py-2" onclick="closeMenu()">Home</a>
+        <a href="index.html" class="block py-2" onclick="closeMenu()">Home</a>
         <a href="about.html" class="block py-2" onclick="closeMenu()">About</a>
         <a href="register.html" class="block py-2" onclick="closeMenu()">Register</a>
         <a href="Donation.html" class="block py-2" onclick="closeMenu()">Donate</a>
