--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <nav class="desktop-menu hidden md:flex space-x-4">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="register.html">Register</a>
             <a href="Donation.html">Donate</a>
@@ -71,7 +71,7 @@
 
     <!-- Mobile Navigation Menu -->
     <div id="mobileMenu" class="mobile-menu md:hidden absolute bg-blue-900 text-white w-3/4 right-0 p-2 rounded-md hidden z-50 max-w-xs">
-        <a href="home.html" class="block py-2" onclick="closeMenu()">Home</a>
+        <a href="index.html" class="block py-2" onclick="closeMenu()">Home</a>
         <a href="about.html" class="block py-2" onclick="closeMenu()">About</a>
         <a href="register.html" class="block py-2" onclick="closeMenu()">Register</a>
         <a href="Donation.html" class="block py-2" onclick="closeMenu()">Donate</a>
