--- a/register.html
+++ b/register.html
@@ -93,7 +93,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <nav class="desktop-menu hidden md:flex space-x-4">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <div class="nav-item">
                 <a href="register.html" class="hover:underline">Register</a>
@@ -113,7 +113,7 @@
 
     <!-- Mobile Navigation Menu -->
     <div id="mobileMenu" class="mobile-menu md:hidden absolute bg-[#E52D2F] text-white w-3/4 right-0 p-2 rounded-md hidden z-50 max-w-xs">
-        <a href="home.html" class="block py-2" onclick="closeMenu()">Home</a>
+        <a href="index.html" class="block py-2" onclick="closeMenu()">Home</a>
         <a href="about.html" class="block py-2" onclick="closeMenu()">About</a>
         <a href="register.html" class="block py-2" onclick="closeMenu()">Register</a>
         <a href="Donation.html" class="block py-2" onclick="closeMenu()">Donate</a>
