--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
             </div>
             <a href="register.html">Register</a>
             <a href="Donation.html">Donate</a>
-            <a href="volunteer.html">Volunteer</a>
+            <a href="Volunteer.html">Volunteer</a>
             <a href="faq.html">FAQ</a>
             <a href="blog.html">Blog</a>
             <a href="Shop.html">Shop</a>
@@ -123,6 +123,7 @@
         <a href="Donation.html" class="block py-2" onclick="closeMenu()">Donate</a>
         <a href="faq.html" class="block py-2" onclick="closeMenu()">FAQ</a>
         <a href="blog.html" class="block py-2" onclick="closeMenu()">Blog</a>
+        <a href="Shop.html" class="font-bold underline">Shop</a>
         <a href="contact.html" class="block py-2" onclick="closeMenu()">Contact</a>
     </div>
 
