--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <a href="Volunteer.html" class="block py-2" onclick="closeMenu()">Volunteer</a>
         <a href="faq.html" class="block py-2" onclick="closeMenu()">FAQ</a>
         <a href="blog.html" class="block py-2" onclick="closeMenu()">Blog</a>
+        <a href="Shop.html" class="font-bold underline">Shop</a>
         <a href="contact.html" class="block py-2" onclick="closeMenu()">Contact</a>
     </div>
     <!-- JavaScript for Mobile Menu -->
