--- a/Donation.html
+++ b/Donation.html
@@ -44,13 +44,12 @@
             <a href="about.html">About</a>
             <a href="register.html">Register</a>
             <a href="Donation.html">Donate</a>
-            <a href="volunteer.html">Volunteer</a>
+            <a href="Volunteer.html">Volunteer</a>
             <a href="faq.html">FAQ</a>
             <a href="blog.html">Blog</a>
             <a href="Shop.html">Shop</a>
             <a href="contact.html">Contact</a>
         </nav>
-    </header>
 
     <!-- Mobile Navigation Menu -->
     <div id="mobileMenu" class="mobile-menu md:hidden absolute bg-[#E52D2F] text-white w-3/4 right-0 p-2 rounded-md hidden z-50 max-w-xs">
