updates on color and nav

--- a/about.html
+++ b/about.html
@@ -121,6 +121,7 @@
         <a href="about.html" class="block py-2" onclick="closeMenu()">About</a>
         <a href="register.html" class="block py-2" onclick="closeMenu()">Register</a>
         <a href="Donation.html" class="block py-2" onclick="closeMenu()">Donate</a>
+        <a href="Volunteer.html" class="block py-2" onclick="closeMenu()">Volunteer</a>
         <a href="faq.html" class="block py-2" onclick="closeMenu()">FAQ</a>
         <a href="blog.html" class="block py-2" onclick="closeMenu()">Blog</a>
         <a href="Shop.html" class="font-bold underline">Shop</a>
@@ -208,7 +209,7 @@
                 <!-- Logo and Description -->
                 <div class="mb-4 md:mb-0 text-center md:text-left">
                     <h2 class="text-2xl font-bold">Nairobi Marathon</h2>
-                    <p class="mt-2 text-sm text-gray-300">Join the run, support a cause, and experience Nairobi's vibrant spirit.</p>
+                    <p class="mt-2 text-sm text-white">Keep Moving, Never Quit, Never Give Up.</p>
                 </div>
                 <!-- Social Media Links -->
                 <div class="flex space-x-4 mt-4 md:mt-0 text-center md:text-left">
@@ -219,10 +220,10 @@
                 </div>
             </div>
 
-            <hr class="my-4 border-gray-600">
+            <hr class="my-4 border-white-600">
 
             <!-- Copyright -->
-            <div class="text-center text-sm text-gray-400">
+            <div class="text-center text-sm text-white-400">
                 <p>&copy; 2025 Nairobi Marathon. All rights reserved. | Designed by Nairobi Marathon Team</p>
             </div>
         </div>
