--- a/Shop.html
+++ b/Shop.html
@@ -41,7 +41,7 @@
     </div>
 
     <!-- Shop Header -->
-    <header class="bg-gradient-to-r from-blue-900 to-blue-700 text-white py-16 text-center mb-8">
+    <header class="bg-[#E52D2F] text-white py-16 text-center mb-8">
         <div class="container mx-auto px-4">
             <h1 class="text-4xl md:text-5xl font-bold mb-4">NO FINISH LINE Official Shop</h1>
             <p class="text-xl">Every purchase supports children with mental impairments</p>
@@ -231,6 +231,32 @@
             </button>
         </aside>
     </main>
+    <!-- Footer Section -->
+    <footer class="bg-[#E52D2F] text-white py-8 mt-12">
+        <div class="container mx-auto px-4 md:px-16 lg:px-24">
+            <div class="flex flex-col md:flex-row justify-between items-center">
+                <!-- Logo and Description -->
+                <div class="mb-4 md:mb-0 text-center md:text-left">
+                    <h2 class="text-2xl font-bold">Nairobi Marathon</h2>
+                    <p class="mt-2 text-sm text-white">Keep Moving, Never Quit, Never Give Up.</p>
+                </div>
+                <!-- Social Media Links -->
+                <div class="flex space-x-4 mt-4 md:mt-0 text-center md:text-left">
+                    <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-facebook fa-lg"></i></a>
+                    <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-twitter fa-lg"></i></a>
+                    <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-instagram fa-lg"></i></a>
+                    <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-youtube fa-lg"></i></a>
+                </div>
+            </div>
+
+            <hr class="my-4 border-white-600">
+
+            <!-- Copyright -->
+            <div class="text-center text-sm text-white-400">
+                <p>&copy; 2025 Nairobi Marathon. All rights reserved. | Designed by Nairobi Marathon Team</p>
+            </div>
+        </div>
+    </footer>
 
     <script>
         // Simple cart functionality
