--- a/faq.html
+++ b/faq.html
@@ -66,7 +66,7 @@
             <a href="about.html">About</a>
             <a href="register.html">Register</a>
             <a href="Donation.html">Donate</a>
-            <a href="volunteer.html">Volunteer</a>
+            <a href="Volunteer.html">Volunteer</a>
             <a href="faq.html">FAQ</a>
             <a href="blog.html">Blog</a>
             <a href="Shop.html">Shop</a>
@@ -75,13 +75,15 @@
     </header>
 
     <!-- Mobile Navigation Menu -->
-    <div id="mobileMenu" class="mobile-menu md:hidden absolute bg-[#E52D2F] text-white w-3/4 right-0 p-2 rounded-md hidden z-50 max-w-xs">
+    <div id="mobileMenu" class="mobile-menu md:hidden absolute bg-[#E52D2F] text-white w-3/4 right-0 p-2 hidden z-50 max-w-xs">
         <a href="index.html" class="block py-2" onclick="closeMenu()">Home</a>
         <a href="about.html" class="block py-2" onclick="closeMenu()">About</a>
         <a href="register.html" class="block py-2" onclick="closeMenu()">Register</a>
         <a href="Donation.html" class="block py-2" onclick="closeMenu()">Donate</a>
+        <a href="Volunteer.html" class="block py-2" onclick="closeMenu()">Volunteer</a>
         <a href="faq.html" class="block py-2" onclick="closeMenu()">FAQ</a>
         <a href="blog.html" class="block py-2" onclick="closeMenu()">Blog</a>
+        <a href="Shop.html" class="block py-2" onclick="closeMenu()">Shop</a>
         <a href="contact.html" class="block py-2" onclick="closeMenu()">Contact</a>
     </div>
     <!-- JavaScript for Mobile Menu -->
@@ -256,30 +258,30 @@
         }
     </script>
 <!-- Footer Section -->
-<footer class="bg-[#E52D2F] text-white py-8 mt-12">
-    <div class="container mx-auto px-4 md:px-16 lg:px-24">
-        <div class="flex flex-col md:flex-row justify-between items-center">
-            <!-- Logo and Description -->
-            <div class="mb-4 md:mb-0 text-center md:text-left">
-                <h2 class="text-2xl font-bold">Nairobi Marathon</h2>
-                <p class="mt-2 text-sm text-gray-300">Join the run, support a cause, and experience Nairobi's vibrant spirit.</p>
+    <footer class="bg-[#E52D2F] text-white py-8 mt-12">
+        <div class="container mx-auto px-4 md:px-16 lg:px-24">
+            <div class="flex flex-col md:flex-row justify-between items-center">
+                <!-- Logo and Description -->
+                <div class="mb-4 md:mb-0 text-center md:text-left">
+                    <h2 class="text-2xl font-bold">Nairobi Marathon</h2>
+                    <p class="mt-2 text-sm text-white">Keep Moving, Never Quit, Never Give Up.</p>
+                </div>
+                <!-- Social Media Links -->
+                <div class="flex space-x-4 mt-4 md:mt-0 text-center md:text-left">
+                    <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-facebook fa-lg"></i></a>
+                    <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-twitter fa-lg"></i></a>
+                    <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-instagram fa-lg"></i></a>
+                    <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-youtube fa-lg"></i></a>
+                </div>
             </div>
-            <!-- Social Media Links -->
-            <div class="flex space-x-4 mt-4 md:mt-0 text-center md:text-left">
-                <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-facebook fa-lg"></i></a>
-                <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-twitter fa-lg"></i></a>
-                <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-instagram fa-lg"></i></a>
-                <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-youtube fa-lg"></i></a>
+
+            <hr class="my-4 border-white-600">
+
+            <!-- Copyright -->
+            <div class="text-center text-sm text-white-400">
+                <p>&copy; 2025 Nairobi Marathon. All rights reserved. | Designed by Nairobi Marathon Team</p>
             </div>
         </div>
-
-        <hr class="my-4 border-gray-600">
-
-        <!-- Copyright -->
-        <div class="text-center text-sm text-gray-400">
-            <p>&copy; 2025 Nairobi Marathon. All rights reserved. | Designed by Nairobi Marathon Team</p>
-        </div>
-    </div>
-</footer>
+    </footer>
 </body>
 </html>
