--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </header>
 
     <!-- Mobile Navigation Menu -->
-    <div id="mobileMenu" class="mobile-menu md:hidden absolute bg-blue-900 text-white w-3/4 right-0 p-2 rounded-md hidden z-50 max-w-xs">
+    <div id="mobileMenu" class="mobile-menu md:hidden absolute bg-[#E52D2F] text-white w-3/4 right-0 p-2 hidden z-50 max-w-xs">
         <a href="index.html" class="block py-2" onclick="closeMenu()">Home</a>
         <a href="about.html" class="block py-2" onclick="closeMenu()">About</a>
         <a href="register.html" class="block py-2" onclick="closeMenu()">Register</a>
@@ -260,33 +260,34 @@ In September 2025, Nairobi will host the first NFL event in Africa, organized by
     <section id="contact" class="py-12 px-4 md:px-16 lg:px-24">
         <h3 class="text-3xl font-bold mb-4">Contact Us</h3>
         <p>Email: info@nofinishlinenairobi.org</p>
-        <p>Phone: +254 712 345678</p>
+            <p>Phone: +254 112155383,+254 708061231</p>
+            <p>Address: Uhuru Gardens, Nairobi, Kenya</p>
     </section>
 <!-- Footer Section -->
-<footer class="bg-[#E52D2F] text-white py-8 mt-12">
-    <div class="container mx-auto px-4 md:px-16 lg:px-24">
-        <div class="flex flex-col md:flex-row justify-between items-center">
-            <!-- Logo and Description -->
-            <div class="mb-4 md:mb-0 text-center md:text-left">
-                <h2 class="text-2xl font-bold">No Finish Line Nairobi</h2>
-                <p class="mt-2 text-sm text-gray-300">Keep Moving,Never quitor give up</p>
+    <footer class="bg-[#E52D2F] text-white py-8 mt-12">
+        <div class="container mx-auto px-4 md:px-16 lg:px-24">
+            <div class="flex flex-col md:flex-row justify-between items-center">
+                <!-- Logo and Description -->
+                <div class="mb-4 md:mb-0 text-center md:text-left">
+                    <h2 class="text-2xl font-bold">Nairobi Marathon</h2>
+                    <p class="mt-2 text-sm text-white">Keep Moving, Never Quit, Never Give Up.</p>
+                </div>
+                <!-- Social Media Links -->
+                <div class="flex space-x-4 mt-4 md:mt-0 text-center md:text-left">
+                    <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-facebook fa-lg"></i></a>
+                    <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-twitter fa-lg"></i></a>
+                    <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-instagram fa-lg"></i></a>
+                    <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-youtube fa-lg"></i></a>
+                </div>
             </div>
-            <!-- Social Media Links -->
-            <div class="flex space-x-4 mt-4 md:mt-0 text-center md:text-left">
-                <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-facebook fa-lg"></i></a>
-                <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-twitter fa-lg"></i></a>
-                <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-instagram fa-lg"></i></a>
-                <a href="#" class="text-white hover:text-yellow-400"><i class="fab fa-youtube fa-lg"></i></a>
+
+            <hr class="my-4 border-white-600">
+
+            <!-- Copyright -->
+            <div class="text-center text-sm text-white-400">
+                <p>&copy; 2025 Nairobi Marathon. All rights reserved. | Designed by Nairobi Marathon Team</p>
             </div>
         </div>
-
-        <hr class="my-4 border-gray-600">
-
-        <!-- Copyright -->
-        <div class="text-center text-sm text-gray-400">
-            <p>&copy; No Finish Line Nairobi 2025 All rights reserved. | Designed by No Finish Line Nairobi</p>
-        </div>
-    </div>
-</footer>
+    </footer>
 </body>
 </html>
