updates on color and nav

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <img src="asset/hero1.png" alt="Nairobi Marathon 2025" class="w-full h-[85vh] object-cover object-center">
     <div class="absolute inset-0 bg-black bg-opacity-50 flex flex-col justify-center items-center text-center text-white px-4">
         <h2 class="text-5xl font-bold mb-4">No Finish Line Nairobi</h2>
-        <p class="text-xl mb-6">Keep Moving,Never Quit or Give up</p>
+        <p class="text-xl mb-6">Keep Moving,Never Quit, Never Give up</p>
         <div id="countdown" class="text-3xl font-bold text-yellow-400 mb-4">
             <span id="days"></span> Days 
             <span id="hours"></span> Hours 
