--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="About the Nairobi Marathon - Learn more about our mission, values, and impact.">
+    <meta name="description" content="About the No Finish Line - Learn more about our mission, values, and impact.">
     <title>Home | No Finish Line Nairobi</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -106,7 +106,7 @@
 
    <!-- Hero Image Section with Donate Button -->
 <section class="relative">
-    <img src="asset/hero1.png" alt="Nairobi Marathon 2025" class="w-full h-[85vh] object-cover object-center">
+    <img src="asset/hero1.png" alt="No Finish Line 2025" class="w-full h-[85vh] object-cover object-center">
     <div class="absolute inset-0 bg-black bg-opacity-50 flex flex-col justify-center items-center text-center text-white px-4">
         <h2 class="text-5xl font-bold mb-4">No Finish Line Nairobi</h2>
         <p class="text-xl mb-6">Keep Moving,Never Quit, Never Give up</p>
@@ -177,7 +177,7 @@
                 <div class="mt-4">
                     <p class="text-blue-800 font-semibold uppercase text-sm">Stories</p>
                     <h4 class="text-lg font-bold">No Finish Line Nairobi: A Journey of Strength</h4>
-                    <p class="text-gray-700 mt-2">Join us in celebrating the Nairobi Marathon. See the best moments.</p>
+                    <p class="text-gray-700 mt-2">Join us in celebrating the No Finish Line Nairobi. See the best moments.</p>
                 </div>
             </div>
 
@@ -269,7 +269,7 @@ In September 2025, Nairobi will host the first NFL event in Africa, organized by
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <!-- Logo and Description -->
                 <div class="mb-4 md:mb-0 text-center md:text-left">
-                    <h2 class="text-2xl font-bold">Nairobi Marathon</h2>
+                    <h2 class="text-2xl font-bold">No Finish Line</h2>
                     <p class="mt-2 text-sm text-white">Keep Moving, Never Quit, Never Give Up.</p>
                 </div>
                 <!-- Social Media Links -->
@@ -285,7 +285,7 @@ In September 2025, Nairobi will host the first NFL event in Africa, organized by
 
             <!-- Copyright -->
             <div class="text-center text-sm text-white-400">
-                <p>&copy; 2025 Nairobi Marathon. All rights reserved. | Designed by Nairobi Marathon Team</p>
+                <p>&copy; 2025 No Finish Line. All rights reserved. | Designed by No Finish Line Team</p>
             </div>
         </div>
     </footer>
