--- a/Donation.html
+++ b/Donation.html
@@ -321,7 +321,7 @@
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <!-- Logo and Description -->
                 <div class="mb-4 md:mb-0 text-center md:text-left">
-                    <h2 class="text-2xl font-bold">Nairobi Marathon</h2>
+                    <h2 class="text-2xl font-bold">No Finish Linen</h2>
                     <p class="mt-2 text-sm text-white">Keep Moving, Never Quit, Never Give Up.</p>
                 </div>
                 <!-- Social Media Links -->
@@ -337,7 +337,7 @@
 
             <!-- Copyright -->
             <div class="text-center text-sm text-white-400">
-                <p>&copy; 2025 Nairobi Marathon. All rights reserved. | Designed by Nairobi Marathon Team</p>
+                <p>&copy; 2025 No Finish Line. All rights reserved. | Designed by No Finish Line Team</p>
             </div>
         </div>
     </footer>
