--- a/faq.html
+++ b/faq.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Frequently Asked Questions - Nairobi Marathon">
-    <title>FAQ | Nairobi Marathon</title>
+    <meta name="description" content="Frequently Asked Questions - No Finish Line">
+    <title>FAQ | No Finish Line</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -263,7 +263,7 @@
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <!-- Logo and Description -->
                 <div class="mb-4 md:mb-0 text-center md:text-left">
-                    <h2 class="text-2xl font-bold">Nairobi Marathon</h2>
+                    <h2 class="text-2xl font-bold">No Finish Line</h2>
                     <p class="mt-2 text-sm text-white">Keep Moving, Never Quit, Never Give Up.</p>
                 </div>
                 <!-- Social Media Links -->
@@ -279,7 +279,7 @@
 
             <!-- Copyright -->
             <div class="text-center text-sm text-white-400">
-                <p>&copy; 2025 Nairobi Marathon. All rights reserved. | Designed by Nairobi Marathon Team</p>
+                <p>&copy; 2025 No Finish Line. All rights reserved. | Designed by No Finish Line Team</p>
             </div>
         </div>
     </footer>
