updates on no finish line

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
    <!-- Hero Image Section with Donate Button -->
 <section class="relative">
-    <img src="asset/hero1.png" alt="No Finish Line 2025" class="w-full h-[85vh] object-cover object-center">
+    <img src="asset/nfl.png" alt="No Finish Line 2025" class="w-full h-[85vh] object-cover object-center">
     <div class="absolute inset-0 bg-black bg-opacity-50 flex flex-col justify-center items-center text-center text-white px-4">
         <h2 class="text-5xl font-bold mb-4">No Finish Line Nairobi</h2>
         <p class="text-xl mb-6">Keep Moving, Never Quit, Never Give up</p>
