--- a/admin.html
+++ b/admin.html
@@ -32,7 +32,7 @@
         <!-- Sidebar -->
         <div id="sidebar" class="sidebar bg-[#E52D2F] text-white w-64 fixed h-full flex flex-col">
             <div class="p-4 flex items-center space-x-2">
-                <img src="../asset/nfl-logo-transparent.png" alt="Logo" class="h-10">
+                <img src="../asset/logo.png" alt="Logo" class="h-10">
                 <span class="logo-text text-xl font-bold">NFL Admin</span>
             </div>
             <nav class="flex-1 mt-6">
