--- a/register.html
+++ b/register.html
@@ -141,7 +141,7 @@
 </head>
 <body class="bg-white text-gray-900 font-sans">
     <header class="bg-[#E52D2F] p-4 text-white flex justify-between items-center sticky top-0 shadow-md relative z-50">
-        <img src="asset/nfl-logo-transparent.png" alt="No Finish Line Logo" class="h-16 bg-[#E52D2F] p-2">
+        <img src="asset/logo.png" alt="No Finish Line Logo" class="h-16 bg-[#E52D2F] p-2">
         <button id="menuToggle" class="text-white text-2xl md:hidden focus:outline-none">
             <i class="fas fa-bars"></i>
         </button>
@@ -394,7 +394,9 @@
     </footer>
 
     <script>
-        const API_BASE_URL = 'http://localhost:5000/api';
+        //const API_BASE_URL = 'http://localhost:5000/api';
+
+        const API_BASE_URL = 'https://nofinish-ebjynu8w9-kajwang.vercel.app/api';
         let currentRegistrationId = null;
 
         document.addEventListener("DOMContentLoaded", function() {
