--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 <body class="bg-white text-gray-900 font-sans">
     <!-- Navigation Bar -->
     <header class="bg-[#E52D2F] p-4 text-white flex justify-between items-center sticky top-0 shadow-md relative z-50">
-        <img src="asset/logo.png" alt="No Finish Line Logo" class="h-16 bg-[#E52D2F] p-2">
+        <img src="asset/nfl-logo-transparent.png" alt="No Finish Line Logo" class="h-16 bg-[#E52D2F] p-2">
         <button id="menuToggle" class="text-white text-2xl md:hidden focus:outline-none">
             <i class="fas fa-bars"></i>
         </button>
