--- a/Volunteer.html
+++ b/Volunteer.html
@@ -397,3 +397,45 @@
     </script>
 </body>
 </html>
+
+document.getElementById('volunteerForm').addEventListener('submit', async function(e) {
+    e.preventDefault();
+
+    const data = {
+        full_name: document.getElementById('fullName').value,
+        email: document.getElementById('email').value,
+        phone: document.getElementById('phone').value,
+        age: document.getElementById('age') ? document.getElementById('age').value : '', // for forms with age
+        occupation: document.getElementById('occupation') ? document.getElementById('occupation').value : '', // for forms with occupation
+        experience: document.getElementById('experience') ? document.getElementById('experience').value : '', // for forms with experience
+        availability: (() => {
+            // Handles both single and multiple select
+            const el = document.getElementById('availability');
+            if (!el) return '';
+            if (el.multiple) {
+                return Array.from(el.selectedOptions).map(opt => opt.value).join(', ');
+            }
+            return el.value;
+        })(),
+        motivation: document.getElementById('motivation') ? document.getElementById('motivation').value : (
+            document.getElementById('why-volunteer') ? document.getElementById('why-volunteer').value : ''
+        )
+    };
+
+    try {
+        const response = await fetch('https://nofinishnrbdjango.fly.dev/api/volunteers/', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(data)
+        });
+        const result = await response.json();
+        if (result.success) {
+            alert('Thank you for your application! We will contact you soon.');
+            this.reset();
+        } else {
+            alert('Submission failed: ' + (result.errors ? JSON.stringify(result.errors) : 'Please check your input.'));
+        }
+    } catch (error) {
+        alert('An error occurred. Please try again later.');
+    }
+});
