--- a/register.html
+++ b/register.html
@@ -394,8 +394,7 @@
     </footer>
 
     <script>
-        const API_BASE_URL = 'http://localhost:5000/api';
-        //const API_BASE_URL = 'https://nofinish-ebjynu8w9-kajwang.vercel.app/api';
+        const API_BASE_URL = 'https://nofinishnrbdjango.fly.dev/api';
         let currentRegistrationId = null;
 
         document.addEventListener("DOMContentLoaded", function() {
@@ -516,7 +515,7 @@
         }
 
         async function submitIndividualRegistration(formData) {
-            const response = await fetch(`${API_BASE_URL}/registrations/individual`, {
+            const response = await fetch(`${API_BASE_URL}/users/registrations/individual/`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -534,7 +533,7 @@
         }
 
         async function submitGroupRegistration(formData) {
-            const response = await fetch(`${API_BASE_URL}/registrations/group`, {
+            const response = await fetch(`${API_BASE_URL}/users/registrations/group/`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
