--- a/register.html
+++ b/register.html
@@ -204,19 +204,19 @@
                     <div class="space-y-4">
                         <h4 class="text-xl font-semibold text-[#E52D2F] border-b pb-2">Personal Information</h4>
                         <div>
-                            <input type="text" id="fullName" name="fullName" placeholder="Full Name" class="w-full p-3 border rounded" required>
+                            <input type="text" id="fullName" name="fullName" placeholder="Full Name" class="w-full p-3 border rounded">
                             <div id="fullNameError" class="error-message hidden">Please enter your full name</div>
                         </div>
                         <div>
-                            <input type="email" id="email" name="email" placeholder="Email" class="w-full p-3 border rounded" required>
+                            <input type="email" id="email" name="email" placeholder="Email" class="w-full p-3 border rounded">
                             <div id="emailError" class="error-message hidden">Please enter a valid email address</div>
                         </div>
                         <div>
-                            <input type="tel" id="phone" name="phone" placeholder="Phone Number (for M-Pesa payment)" class="w-full p-3 border rounded" required>
+                            <input type="tel" id="phone" name="phone" placeholder="Phone Number (for M-Pesa payment)" class="w-full p-3 border rounded">
                             <div id="phoneError" class="error-message hidden">Please enter a valid phone number</div>
                         </div>
                         <div>
-                            <input type="date" id="dob" name="dob" placeholder="Date of Birth" class="w-full p-3 border rounded" required>
+                            <input type="date" id="dob" name="dob" placeholder="Date of Birth" class="w-full p-3 border rounded">
                             <div id="dobError" class="error-message hidden">Please enter your date of birth</div>
                         </div>
                     </div>
@@ -224,7 +224,7 @@
                     <div class="mt-6">
                         <h4 class="text-xl font-semibold text-[#E52D2F] border-b pb-2 mb-4">Select Your Category</h4>
                         <div class="mb-4">
-                            <select id="raceCategory" name="raceCategory" class="w-full p-3 border rounded bg-gray-50" required>
+                            <select id="raceCategory" name="raceCategory" class="w-full p-3 border rounded bg-gray-50">
                                 <option value="">Select Your Race Category</option>
                                 <option value="u13">Children U13: 3km</option>
                                 <option value="u15">Children U15: 5km</option>
@@ -257,16 +257,16 @@
                     <div class="mb-6">
                         <h4 class="text-xl font-semibold text-[#E52D2F] border-b pb-2 mb-4">Group Information</h4>
                         <div class="mb-4">
-                            <input type="text" id="groupName" name="groupName" placeholder="Group Name" class="w-full p-3 border rounded" required>
+                            <input type="text" id="groupName" name="groupName" placeholder="Group Name" class="w-full p-3 border rounded">
                         </div>
                         <div class="mb-4">
-                            <input type="text" id="groupFullName" name="groupFullName" placeholder="Contact Full Name" class="w-full p-3 border rounded" required>
+                            <input type="text" id="groupFullName" name="groupFullName" placeholder="Contact Full Name" class="w-full p-3 border rounded">
                         </div>
                         <div class="mb-4">
-                            <input type="email" id="groupEmail" name="groupEmail" placeholder="Contact Email" class="w-full p-3 border rounded" required>
+                            <input type="email" id="groupEmail" name="groupEmail" placeholder="Contact Email" class="w-full p-3 border rounded">
                         </div>
                         <div class="mb-4">
-                            <input type="tel" id="groupPhone" name="groupPhone" placeholder="Phone Number (for M-Pesa payment)" class="w-full p-3 border rounded" required>
+                            <input type="tel" id="groupPhone" name="groupPhone" placeholder="Phone Number (for M-Pesa payment)" class="w-full p-3 border rounded">
                         </div>
                     </div>
 
@@ -283,9 +283,15 @@
 
                 <div class="space-y-4">
                     <h4 class="text-xl font-semibold text-[#E52D2F] border-b pb-2">Emergency Contact</h4>
-                    <div>
-                        <input type="text" id="emergencyName" name="emergencyName" placeholder="Emergency Contact Name" class="w-full p-3 border rounded">
-                        <div id="emergencyNameError" class="error-message hidden">Please enter emergency contact name</div>
+                    <div class="md:flex md:space-x-4">
+                        <div class="md:w-1/2 w-full mb-4 md:mb-0">
+                            <input type="text" id="emergencyName" name="emergencyName" placeholder="Emergency Contact Name" class="w-full p-3 border rounded">
+                            <div id="emergencyNameError" class="error-message hidden">Please enter emergency contact name</div>
+                        </div>
+                        <div class="md:w-1/2 w-full">
+                            <input type="tel" id="emergencyPhone" name="emergencyPhone" placeholder="Emergency Contact Phone" class="w-full p-3 border rounded">
+                            <div id="emergencyPhoneError" class="error-message hidden">Please enter emergency contact phone</div>
+                        </div>
                     </div>
                 </div>
 
