phone number updated to match backend

--- a/register.html
+++ b/register.html
@@ -562,7 +562,7 @@
                 first_name: firstName,
                 last_name: lastName,
                 email: email,
-                phone_number: phone_number
+                phoneNumber: phone_number
             };
             const response = await fetch(`${API_BASE_URL}/pesapal/initiate/`, {
                 method: 'POST',
